# aplicacionFinanciera

./: .gitignore  CMakeLists.txt  README.md
headers/: estructuras.h  operaciones.h  validaciones.h
headers/headersTransaciones/: anulacion.h  cierre.h  compra.h  reimpresion.h  reporteTotal.h
output/: Transacciones.txt
sources/: main.c  menu.c  operaciones.c  validaciones.c
sources/transacciones/: anulacion.c  cierre.c  compra.c  reimpresion.c  reporteTotal.c
